--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -356,7 +356,8 @@ since they are essentially both commands just acting upon different things. */
         padding: 0 1ch;
         height: 16px;
         &:hover {
-          background: lighten($dropdown-selected-background, 5%);
+          background-color: $highlight-color;
+          color: darken(white, 5%);
         }
 
         .version {
@@ -369,6 +370,15 @@ since they are essentially both commands just acting upon different things. */
           text-transform: lowercase;
           font-family: monospace;
           color: darken($dropdown-foreground, 15%);
+        }
+      }
+    }
+    ul:hover {
+      .fluid-selected {
+        background: transparent;
+        &:hover {
+          background-color: $highlight-color;
+          color: darken(white, 5%);
         }
       }
     }
