Remove updating of autocomplete/command pallete index on hover
Highlight list items when hovering over them, but go back to highlighting the selected item  (determined by autocomplete/command palette index) while not hovering

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -375,6 +375,16 @@ since they are essentially both commands just acting upon different things. */
         }
       }
     }
+    ul:hover {
+      .fluid-selected,
+      li {
+        background: transparent;
+        &:hover {
+          background-color: $highlight-color;
+          color: darken(white, 5%);
+        }
+      }
+    }
   }
 }
 
