--- a/client/src/styles/_dropdown.scss
+++ b/client/src/styles/_dropdown.scss
@@ -205,6 +205,9 @@ $wrapper-background: $black2;
 
   .toggle-btn {
     cursor: pointer;
+    margin-top: -2px;
+    margin-right: 4px;
+    font-size: 14px;
   }
 
   .actions {
