Make fluid placeholders italics, so they look more like placeholders

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -193,6 +193,10 @@ https://github.com/chriskempson/tomorrow-theme */
     color: $orange;
   }
 
+  .fluid-placeholder {
+    font-style: italic;
+  }
+
   .fluid-blank,
   .fluid-placeholder,
   .fluid-empty {
