--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -169,7 +169,8 @@ https://github.com/chriskempson/tomorrow-theme */
     display: block;
   }
 
-  .fluid-category-string {
+  .fluid-category-string,
+  .fluid-pattern-string {
     // I don't know why this works inside &:not(.fa) and not a level up ... but
     // I tried it, since that's how we do it in _canvas.scss
     //
