https://trello.com/c/6YvEjT9x/2040-most-recent-db-entry-and-connected-workers-handlers-appear-intermittently-in-fluid
add border to make it (maybe) more clear that the top is draggable and bottom is not

Turn TLDragRegionMouseUp's that don't move the TL into clicks

fix integration test

Not sure why this is necessary, but w/o it, I consistently get
"specified selector does not match any node in the DOM tree" on the
second read of ".selected .live-value"

Make the draggable area larger

Paul noticed (and we repro'd) that there's a large area around the edges
of a DB handler  that aren't draggable. Explanation for why this is, and
how we fixed it, is in a comment in the commit.

--- a/client/src/styles/_db.scss
+++ b/client/src/styles/_db.scss
@@ -152,16 +152,21 @@
   }
 
   .dbtitle {
-    background-image: url("/_db.png");
-    background-position: left center;
-    background-repeat: no-repeat;
-    padding-left: 20px;
-    /* Adjust according to image size to push text across. */
     margin-bottom: 10px;
     margin: 0 auto;
 
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #b8b8b8;
+    padding-bottom: $spacing-medium;
+
     /* center the db name */
     &::before {
+      background-image: url("/_db.png");
+      background-position: left center;
+      background-repeat: no-repeat;
+      padding-left: 20px;
+      /* Adjust according to image size to push text across. */
       content: "DB: ";
       font-weight: bold;
       font-size: 110%;
