--- a/client/src/styles/_canvas.scss
+++ b/client/src/styles/_canvas.scss
@@ -259,7 +259,7 @@ body #app * {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   right: 0px;
   text-decoration: none;
