go to page working

--- a/client/src/styles/_canvas.scss
+++ b/client/src/styles/_canvas.scss
@@ -148,6 +148,9 @@ body #app * {
   min-height: 100%;
   min-width: 100%;
   overflow: visible;
+  // padding: 100px;
+  padding-right: 200px;
+  padding-bottom: 200px;
 
   .node {
     position: absolute;
