--- a/client/src/styles/_canvas.scss
+++ b/client/src/styles/_canvas.scss
@@ -148,7 +148,7 @@ body #app * {
   min-height: 100%;
   min-width: 100%;
   overflow: visible;
-  // padding: 100px;
+  margin-left: 320px;
   padding-right: 200px;
   padding-bottom: 200px;
 
