we dont really need mousewheel

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -168,3 +168,7 @@ $spacing-small: 5px;
 
 $toplevel-min-width: 360px;
 $ridiculously-large: 2000%;
+
+/* Sidebar */
+$sidebarClosedWidth: 3.5em;
+$sidebarFullWidth: 20em;
