--- a/client/src/styles/_canvas.scss
+++ b/client/src/styles/_canvas.scss
@@ -94,11 +94,16 @@ html {
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 7px;
   background-color: $grey2;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: $canvas-background;
 }
 
 body {
@@ -112,7 +117,7 @@ body {
   background: $canvas-background;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
   position: absolute;
   top: 0;
   left: 0;
@@ -141,15 +146,22 @@ body #app * {
 }
 
 #canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: block;
   min-height: 100%;
   min-width: 100%;
   overflow: visible;
   padding-right: 200px;
   padding-bottom: 200px;
+
+  &.sidebar-close {
+    min-width: calc(100% - #{$sidebarClosedWidth});
+    margin-left: $sidebarClosedWidth;
+  }
+
+  &.sidebar-open {
+    min-width: calc(100% - #{$sidebarFullWidth});
+    margin-left: $sidebarFullWidth;
+  }
 
   .node {
     position: absolute;
