--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -438,12 +438,62 @@ since they are essentially both commands just acting upon different things. */
   .error-indicator {
     position: absolute;
     left: 6px;
-  }
-}
 
-/* Hide non-fluid rail for now until we get rid of non-fluid code */
-.handler-body > .fluid-ast + .rop-rail.active {
-  display: none;
+    width: 12px;
+    height: 12px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+
+    &:hover {
+      opacity: 1;
+      cursor: pointer;
+    }
+
+    &:hover:after {
+      @extend .tooltip;
+
+      position: absolute;
+      left: 25px;
+      top: -2px;
+    }
+
+    &.Option {
+      background-image: url("/icons/option_just.svg");
+      &:hover:after {
+        content: ":take-function-off-rail (x -> Just x)";
+      }
+
+      &.ErrorRail {
+        background-image: url("/icons/option_nothing.svg");
+
+        &:hover:after {
+          content: ":take-function-off-rail ((/) -> Nothing)";
+        }
+      }
+    }
+
+    &.Result {
+      background-image: url("/icons/result_ok.svg");
+
+      &:hover:after {
+        content: ":take-function-off-rail (x -> Ok x)";
+      }
+
+      &.ErrorRail {
+        background-image: url("/icons/result_error.svg");
+
+        &:hover:after {
+          content: ":take-function-off-rail ((!) -> Error msg)";
+        }
+      }
+    }
+
+    &.Result.EvalFail,
+    &.Option.EvalFail {
+      background-image: none;
+    }
+  }
 }
 
 $error-color: saturate($red, 10%);
