Default to Fira Mono
Fira Code has ligatures; we usually don't want those. Exceptions:
- font-awesome/fa class
- fluid-binop
- fluid-pipe-symbol

https://trello.com/c/Asp2Hn1r/2044-live-values-should-not-use-fira-code-w-ligatures

--- a/client/styles/_canvas.scss
+++ b/client/styles/_canvas.scss
@@ -136,7 +136,7 @@ body {
 body #app * {
   &:not(.fa) {
     // skip fontawesome
-    font-family: "Fira Code", monospace;
+    font-family: "Fira Mono", monospace;
   }
 }
 
