--- a/client/styles/_fluid.scss
+++ b/client/styles/_fluid.scss
@@ -322,6 +322,13 @@ https://github.com/chriskempson/tomorrow-theme */
     // removing position realtive. Removing background color. Something with z-index; Opacity too. Inline-block seems to work.
   }
 
+  .fluid-binop,
+  .fluid-pipe-symbol {
+    &:not(.fa) {
+      font-family: "Fira Code", monospace;
+    }
+  }
+
   .fluid-pipe-symbol {
     color: $blue;
     font-size: 10px;
