--- a/backend/templates/ui.html
+++ b/backend/templates/ui.html
@@ -44,5 +44,5 @@
     </script>
     <script type="text/javascript" src="//{{STATIC}}/appsupport.js"></script>
   </head>
-  <body onKeyDown="stopKeys(event)" onKeyUp="stopKeys(event)"></body>
+  <body></body>
 </html>
