--- a/client/styles/_live-data.scss
+++ b/client/styles/_live-data.scss
@@ -83,10 +83,15 @@
       }
 
       &.unfetchable {
-        width: 6px;
-        height: 6px;
-        border: dotted 2px $live-value-foreground;
-        border-radius: 50%;
+        cursor: not-allowed;
+
+        .dot {
+          width: 8px;
+          height: 8px;
+          border: dashed 1px $grey2;
+          box-sizing: border-box;
+          border-radius: 50%;
+        }
       }
 
       &.mouseovered .empty-dot {
