make unfetchable.dot border white so it is easier to see

--- a/client/styles/_live-data.scss
+++ b/client/styles/_live-data.scss
@@ -88,7 +88,7 @@
         .dot {
           width: 8px;
           height: 8px;
-          border: dashed 1px $grey2;
+          border: dashed 1px $white1;
           box-sizing: border-box;
           border-radius: 50%;
         }
