Darkens ghost partials, making it easier to tell the difference

--- a/client/styles/_fluid.scss
+++ b/client/styles/_fluid.scss
@@ -313,7 +313,7 @@ https://github.com/chriskempson/tomorrow-theme */
   }
 
   .fluid-partial-ghost {
-    color: $grey3;
+    color: darken($grey3, 25%);
   }
 
   // <Position autocomplete as a dropdown>
